	  + added preliminary read-only support for java2d geometries
	- Full autoconf-based configuration
	- NEW scale() and transscale() companion methods to translate()
	- NEW line_substring() function
	- NEW line_locate_point() function
	- NEW M(point) function
	- NEW LineMerge(geometry) function
	- NEW shift_longitude(geometry) function
	- NEW azimuth(geometry) function
	- JTS support improvements
	- Initial GEOS C-API support
	- Removed automatic call to fix_geometry_columns() in
	  AddGeometryColumns() and update_geometry_stats()
	- Initial support for topology modelling
	- Stricter mapping between DBF and SQL integer and string attributes
	- Changed M() and Z() functions to return NULL if requested
	  dimension is not available
	- Initial support for postgresql 8.2

PostGIS 1.0.6CVS
	- Fixed palloc(0) call in collection deserializer (only gives
	  problem with --enable-cassert)
	- Fixed bbox cache handling bugs
	- Fixed geom_accum(NULL, NULL) segfault

PostGIS 1.0.5
2005/11/25
	- New "Reporting Bugs" chapter in manual
	- Segfault fix in shp2pgsql (utf8 encoding)
	- Fixed computation of null values fraction in analyzer
	- Fixed return code of shp2pgsql
	- Fixed handling of trailing dots in dbf numerical attributes
	- Schema aware postgis_proc_upgrade.pl, support for pgsql 7.2+
	- Fixed a small bug in the getPoint4d_p() low-level function
	- Fixed memory alignment problems
	- Speedup of serializer functions
	- Bug fix in force_4d, force_3dm and force_3dz functions

PostGIS 1.0.4
2005/09/09
	- Memory leak plugged in GiST indexing
	- Segfault fix in transform() handling of proj4 errors
	- Fixed some proj4 texts in spatial_ref_sys (missing +proj)
	- GiST indexing cleanup
	- Loader: fixed string functions usage, reworked NULL objects check,
	  fixed segfault on MULTILINESTRING input.
	- Fixed bug in MakeLine dimension handling
	- Looser syntax acceptance in box3d parser
	- Documentation improvements
	- More robust selectivity estimator
	- Minor speedup in distance()