@@ -4758,6 +4758,48 @@ FROM geometry_table;</literallayout>
           </listitem>
         </varlistentry>
 
+        <varlistentry>
+          <term>locate_along_measure(geometry, float8)</term>
+
+          <listitem>
+            	<para>
+		Return a derived geometry collection value with elements that
+		match the specified measure.
+		Polygonal elements are not supported.
+		</para>
+
+		<para>
+		Semantic is specified by: ISO/IEC CD 13249-3:200x(E) -
+		Text for Continuation CD Editing Meeting
+		</para>
+
+		<para>
+			Availability: 1.1.0
+		</para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry>
+          <term>locate_between_measures(geometry, float8, float8)</term>
+
+          <listitem>
+            	<para>
+		Return a derived geometry collection value with elements that
+		match the specified range of measures inclusively.
+		Polygonal elements are not supported. 
+		</para>
+
+		<para>
+		Semantic is specified by: ISO/IEC CD 13249-3:200x(E) -
+		Text for Continuation CD Editing Meeting
+		</para>
+
+		<para>
+			Availability: 1.1.0
+		</para>
+          </listitem>
+        </varlistentry>
+
 	</variablelist>
 
 	</sect2>
